add functionality to assign members to board

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
     <string name="add_member">Add Member</string>
     <string name="cancel">CANCEL</string>
     <string name="add">ADD</string>
-    <string name="search_member">Search Member</string>
+    <string name="search_member">Add Member</string>
 
     <string name="label_color">Label Color</string>
     <string name="select_color">Select Color</string>
